--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -6,8 +6,8 @@
   <body>
     <h1>States</h1>
     <ul id="states">
-      {% for key in states %}
-      <li>{{ states[key].id }}: <b>{{ states[key].name }}</b></li>
+      {% for key in states.values()|sort(attribute="name") %}
+      <li>{{ key.id }}: <b>{{ key.name }}</b></li>
       {% endfor %}
     </ul>
   </body>
