--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -10,7 +10,7 @@
     <h1>State: {{ states.name }}</h1>
     <h3>Cities:</h3>
     <ul>
-      {% for city in states.cities %}
+      {% for city in states.cities|sort(attribute="name") %}
       <li>{{ city.id }}: <b>{{ city.name }}</b></li>
       {% endfor %}
     </ul>
