added an overflow to the popover

--- a/web_flask/static/styles/6-filters.css
+++ b/web_flask/static/styles/6-filters.css
@@ -43,6 +43,8 @@
   display: none;
   background-color: #fafafa;
   width: 90%;
+  max-height: 300px;
+  overflow: auto;
 
   margin-left: -1px;
   margin-top: 33px;
