--- a/web_flask/static/styles/6-filters.css
+++ b/web_flask/static/styles/6-filters.css
@@ -111,3 +111,21 @@ button {
 button:hover {
   opacity: 90%;
 }
+
+.container .filters .amenities:hover .popover,
+.container .filters .locations:hover .popover {
+  position: relative;
+  display: block;
+  z-index: 10;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.popover::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.popover {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
